--- a/ui.uni/css/layout.css
+++ b/ui.uni/css/layout.css
@@ -148,6 +148,7 @@ ul.systemMenu > li.mouseover > a .exit, ul.systemMenu > li.activeMenuItem > a .e
 	min-width: 100px;
 	position: absolute;
 	margin-left: 96px;
+	z-index: 50;
 }
 #footer #now_next {
 	display: inline;
@@ -181,6 +182,7 @@ ul.systemMenu > li.mouseover > a .exit, ul.systemMenu > li.activeMenuItem > a .e
 	/*min-width: 242px;*/
 	height: 48px;
 	float: right;
+	overflow: hidden;
 }
 #footer #remainPlayer {
 	font-size: 16px;
@@ -255,6 +257,7 @@ ul.systemMenu > li.mouseover > a .exit, ul.systemMenu > li.activeMenuItem > a .e
 #streamdets {
 	z-index: 1;
 	float: left;
+	opacity: 0.7;
 	/*min-width: 20px;*/
 }
 #streamdets div.channels0, #streamdets div.channels1, #streamdets div.channels2, #streamdets div.channels3, #streamdets div.channels4, #streamdets div.channels5, #streamdets div.channels6, #streamdets div.channels7, #streamdets div.channels8, #streamdets div.channels9, #streamdets div.channels10 {
