--- a/ui.light/css/layout.css
+++ b/ui.light/css/layout.css
@@ -436,6 +436,14 @@ div.mkfOverlay div.dialog span.label {
 	font-weight: bold;
 	margin-right: 10px;
 }
+div.mkfOverlay div.dialog span.resume {
+	float: left;
+	font-size: 30px;
+    font-weight: bold;
+    margin-top: 15px;
+    text-align: center;
+    width: 580px;
+}
 div.mkfOverlay div.dialog span.labelinfo {
     float: left;
     font-weight: bold;
