--- a/ui.uni/css/layout.css
+++ b/ui.uni/css/layout.css
@@ -1872,7 +1872,7 @@ br.clear {
 	position: fixed;
 	padding: 10px 0px 0px 10px;
 	height: 310px;
-	min-width: 510px;
+	min-width: 620px;
 	bottom: 48px;
 	float: right;
 	right: 20px;
@@ -1894,7 +1894,7 @@ br.clear {
 }
 #controls {
 	height: 280px;
-	width: 270px;
+	width: 385px;
 	float: left;
 }
 #controls #quick {
@@ -2004,6 +2004,13 @@ br.clear {
 }
 #controls #quick_con a.next {
     background-position: -336px 0;
+}
+#controls #quick_con a.rewind {
+    background-position: -240px 0;
+	margin-left: 6px;
+}
+#controls #quick_con a.fastforward {
+    background-position: -288px 0;
 }
 #controls #quick_con a.shuffle {
     background-position: 0 0;
@@ -2180,7 +2187,7 @@ span.currentlyPlaying {
 	float: left;
 	position: absolute;
 	bottom: 3px;
-	width: 464px;
+	width: 580px;
 	height: 20px;
 }
 #preload {
