--- a/ui.light/css/layout.css
+++ b/ui.light/css/layout.css
@@ -196,6 +196,24 @@ ul.mkfPageContextMenu li {
 .loading {
 	background: url('../images/loading.gif') no-repeat top left;
 }
+div.goNextPrev {
+	display: block;
+	clear: both;
+}
+div.goNextPrev a.prevPage{
+	font-size: 26px;
+	float: left;
+	margin-left: 10px;
+}
+div.goNextPrev a.nextPage{
+	font-size: 26px;
+	float: right;
+	margin-left: 10px;
+}
+div.goNextPrev div.lastCount{
+	font-size: 26px;
+	text-align: center;
+}
 img.thumb {
 	/*border: 1px solid #575757;*/
 	height: 125px;
