--- a/ui.lightDark/css/layout.css
+++ b/ui.lightDark/css/layout.css
@@ -167,6 +167,24 @@ ul.mkfPageContextMenu li {
 .loading {
     background: url("../images/loading.gif") no-repeat scroll left top transparent;
 }
+div.goNextPrev {
+	display: block;
+	clear: both;
+}
+div.goNextPrev a.prevPage{
+	font-size: 26px;
+	float: left;
+	margin-left: 10px;
+}
+div.goNextPrev a.nextPage{
+	font-size: 26px;
+	float: right;
+	margin-left: 10px;
+}
+div.goNextPrev div.lastCount{
+	font-size: 26px;
+	text-align: center;
+}
 img.thumb {
     /*border: 1px solid #575757;*/
     height: 125px;
