--- a/ui.lightDark/css/layout.css
+++ b/ui.lightDark/css/layout.css
@@ -1244,11 +1244,11 @@ div.movietags {
 	width: 580px;
 }
 div.mkfOverlay div.dialogSystemControl {
-    width: 400px;
-	height: 375px;
+    width: 535px;
+	height: 460px;
 }
 div.systemControls {
-	margin-top: 307px;
+	margin-top: 392px;
     height: 50px;
 }
 div.input_big {
@@ -1260,20 +1260,48 @@ div.input_big {
 	position: absolute;
 	margin: 5px;
 }
-div.input_big_av {
+div.controlsPlayer {
     background-color: #808080;
     border-radius: 5px 5px 5px 5px;
     border-width: 0;
 	height: 280px;
-	width: 130px;
+	width: 260px;
 	position: absolute;
-	margin: 5px 5px 5px 270px;
+	margin-left: 270px;
+	margin-top: 5px;
+}
+div.controlsPlayerEx {
+    background-color: #808080;
+    border-radius: 5px 5px 5px 5px;
+    border-width: 0;
+	height: 80px;
+	width: 260px;
+	position: absolute;
+	margin-left: 270px;
+	margin-top: 290px;
+}
+div.controlsPlayerEx  a {
+	background-color: #555;
+	border-radius: 5px 5px 5px 5px;
+}
+div.input_big_av {
+    background-color: #808080;
+    border-radius: 5px 5px 5px 5px;
+    border-width: 0;
+	height: 80px;
+	width: 260px;
+	position: absolute;
+	margin: 290px 5px 5px 5px;
 }
 div.input_big_av  a {
 	background-color: #555;
 	border-radius: 5px 5px 5px 5px;
 }
 div.input_big  a {
+	background-color: #555;
+	border-radius: 5px 5px 5px 5px;
+}
+div.controlsPlayer  a {
 	background-color: #555;
 	border-radius: 5px 5px 5px 5px;
 }
@@ -1348,6 +1376,74 @@ div.showEpisode {
 	position: relative; 
 	vertical-align:text-top;
 }
+a.bigShuffle, a.bigUnshuffle, a.bigRepeat, a.bigRepeat1, a.bigRepeatOff {
+    background: url("../images/controls_big_playerEx.png") no-repeat scroll 0 0 transparent;
+    float: left;
+    height: 70px;
+    width: 70px;
+}
+div.controlsPlayerEx a.bigShuffle {
+    background-position: 0 0;
+	margin: 5px 20px 0 50px;
+}
+div.controlsPlayerEx a.bigUnshuffle {
+    background-position: 0 0;
+	margin: 5px 20px 0 50px;
+}
+div.controlsPlayerEx a.bigRepeat {
+    background-position: -70px 0;
+	margin-top: 5px;
+}
+div.controlsPlayerEx a.bigRepeat1 {
+    background-position: -140px 0;
+	margin-top: 5px;
+}
+div.controlsPlayerEx a.bigRepeatOff {
+    background-position: -210px 0;
+	margin-top: 5px;
+}
+a.bigPlayPause, a.bigStop, a.bigRW, a.bigFF, a.bigNext, a.bigPrev, a.bigVolUp, a.bigVolDown,  a.bigMute {
+    background: url("../images/controls_big_player.png") no-repeat scroll 0 0 transparent;
+    float: left;
+    height: 70px;
+    width: 70px;
+}
+a.bigPlayPause {
+    background-position: -350px 0px;
+    margin: 10px 0px 0px 10px;
+}
+a.bigPrev {
+    background-position: 0px 0px;
+    margin: 10px 15px 0px;
+}
+a.bigNext {
+    background-position: -210px 0px;
+    margin: 10px 10px 0 0px;
+}
+a.bigStop {
+    background-position: -280px 0;
+    margin: 25px 0px 0 10px;
+}
+a.bigRW {
+    background-position: -70px 0;
+    margin: 25px 15px 0px;
+}
+a.bigFF {
+    background-position: -140px 0;
+    margin: 25px 10px 0px 0px;
+}
+a.bigMute {
+    background-position: -560px 0;
+    margin: 25px 0px 0 10px;
+}
+a.bigVolUp {
+    background-position: -490px 0;
+    margin: 25px 10px 0px 0px;
+}
+a.bigVolDown {
+    background-position: -420px 0;
+	margin: 25px 15px 0px;
+}
 a.bigLeft, a.bigRight, a.bigUp, a.bigDown, a.bigSelect, a.bigBack, a.bigHome, a.bigSubOnOff,  a.bigSubNext, a.bigSubPrev, a.bigAudioNext, a.bigAudioPrev, a.bigContextMenu , a.bigInfo {
     background: url("../images/controls_big.png") no-repeat scroll 0 0 transparent;
     float: left;
@@ -1356,7 +1452,7 @@ a.bigLeft, a.bigRight, a.bigUp, a.bigDown, a.bigSelect, a.bigBack, a.bigHome, a.
 }
 a.bigDown {
     background-position: 0 0;
-    margin: 25px 95px 20px;
+    margin: 25px 15px 0px;
 }
 a.bigRight {
     background-position: -70px 0;
@@ -1394,33 +1490,33 @@ a.bigSubOnOff {
     background-position: -630px 0px;
 	width: 35px;
 	height: 35px;
-	margin: 25px 0px 0px 5px;
+	margin-top: 25px;
 }
 a.bigSubNext {
     background-position: -525px 0;
 	width: 35px;
-	margin: 10px 0px 0px 5px;
+	margin: 5px 10px;
 }
 a.bigSubPrev {
     background-position: -490px 0;
 	width: 35px;
-	margin: 10px 0px 0px 8px;
+	margin: 5px 10px 5px 5px;
 }
 a.bigAudioNext {
     background-position: -595px 0;
 	width: 35px;
-	margin: 25px 0 0 45px;
+	margin: 5px 5px 5px 35px;
 }
 a.bigAudioPrev {
     background-position: -560px 0;
 	width: 35px;
-	margin: 25px 0px 0 8px;
+	margin: 5px;
 }
 a.exitXBMC, a.shutdown, a.suspend, a.reboot {
     background: url("../images/system_buttons.png") no-repeat scroll 0 0 transparent;
     float: left;
     height: 42px;
-    margin-right: 67px;
+    margin-right: 111px;
     width: 42px;
 }
 a.shutdown {
