--- a/ui.uni/css/layout.css
+++ b/ui.uni/css/layout.css
@@ -1315,6 +1315,41 @@ span.infoinfo {
 	width: 50px;
 	height: 48px;
 }
+div.genres {
+	width: 415px;
+	margin: auto;
+	padding-top: 5px;
+}
+span.genres {
+    background: url("../images/genres.png") no-repeat scroll 0 0 #9B9B9B;
+    border-radius: 5px 5px 5px 5px;
+    color: #FFFFFF;
+    float: left;
+    margin-right: 10px;
+	margin-bottom: 10px;
+    padding: 128px 0 5px;
+    text-align: center;
+    text-decoration: none;
+    width: 128px;
+}
+span.genreMovies {
+	background-position: -384px 0px;
+}
+span.genreTV {
+	background-position: -512px 0px;
+}
+span.genreMusicVid {
+    background-position: -640px 0px;
+}
+span.genreMovies:hover {
+	background-position: 0px 0px;
+}
+span.genreTV:hover {
+	background-position: -128px 0px;
+}
+span.genreMusicVid:hover {
+    background-position: -256px 0px;
+}
 div.tools {
 	width: 415px;
 	margin: auto;
