--- a/ui.uni/css/layout.css
+++ b/ui.uni/css/layout.css
@@ -136,7 +136,7 @@ nav li li:first-child { border-top-width:1px }
 
 #navigation li:hover > ul { display:block; position:absolute; top:1.4em; left:-1px; width:8em; z-index:10 }
 #navigation li li:hover ul{ left:8em; top:-1px }
-#navigation li.mkfSubMenu:after    { content:'\25ba'; float:right; vertical-align:middle; font-size:50% }
+#navigation li.mkfSubMenu1:after    { content:'\25ba'; float:right; vertical-align:middle; font-size:50% }
 */
 #navigation li.mkfSubMenu1:hover > ul { display:block; position:absolute; top:0em; left:0px; z-index:10 }
 #navigation li.mkfSubMenu1 li:hover ul{ left:8em; top:-1px }
@@ -144,6 +144,13 @@ nav li li:first-child { border-top-width:1px }
 #navigation .mkfSubMenu1 li.menuItem:hover > ul { display:inline-block; position:relative; top: 0; left:0px; padding: 0; z-index:10 }
 #navigation .mkfSubMenu2 { display:none }
 
+#navigation ul.mkfMenu ul.mkfSubMenu1 > li.subMenu  a {
+  /*content: '\25ba';
+  float: right;
+  vertical-align: middle;
+  font-size: 150%;*/
+  background-color: rgba(100, 100, 100, 0.9);
+}
 /*end submenus*/
 
 #navigation ul.mkfMenu ul > li > a {
@@ -162,7 +169,7 @@ nav li li:first-child { border-top-width:1px }
 #navigation ul.mkfMenu ul.mkfSubMenu2 > li > a {
   width: 100%;
 }
-#navigation ul.mkfMenu ul > li > a:hover {
+#navigation ul.mkfMenu ul > li > a:hover, #navigation ul.mkfMenu ul.mkfSubMenu1 > li.subMenu  a:hover {
   background-color: #A0E312;
   color: #000000;
 }
@@ -173,9 +180,9 @@ nav li li:first-child { border-top-width:1px }
   /*margin: 4px 5px 0 0;*/
   width: 48px;
 }
-#navigation ul.mkfMenu > li.mouseover > a span.icon, ul.systemMenu > li.mouseover > a span.icon {
-  /*margin: 10px 5px 0 0;*/
-}
+/*#navigation ul.mkfMenu > li.mouseover > a span.icon, ul.systemMenu > li.mouseover > a span.icon {
+  margin: 10px 5px 0 0;
+}*/
 #navigation ul.mkfMenu > li > a span.music {
   background-position: 0 0;
 }
