--- a/ui.uni/css/layout.css
+++ b/ui.uni/css/layout.css
@@ -2832,8 +2832,11 @@ div.searchCom {
 #preload {
   display: none;
 }
-h1.findBoxTitle {
-  color: #4B4B4B;
+div.findBoxTitle {
+  display: inline-block;
+  color: #DDD;
+  background-color: rgba(0,0,0,0.8);
   font-size: 14px;
-  margin: 10px;
+  margin: 5px;
+  padding: 10px;
 }
