--- a/ui.uni/css/layout.css
+++ b/ui.uni/css/layout.css
@@ -14,12 +14,13 @@ h2 {
 }
 #header {
   /*background: url("../images/logo.png") no-repeat scroll 20px 10px #333333;*/
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.7);
   min-width: 600px; 
   !important; width: 600px;
   position: absolute;
   width: 100%;
   height: 48px;
+  z-index: 16;
   /*padding-left: 145px;*/
 }
 #navigation {
@@ -29,7 +30,7 @@ h2 {
   position: absolute;
   top: 110px;
   width: 100%;*/
-  z-index: 5;
+  z-index: 22;
 }
 #navigation ul.mkfMenu, ul.systemMenu, ul.mkfPageContextMenu {
   list-style-type: none;
@@ -213,13 +214,14 @@ ul.systemMenu > li.mouseover > a .exit, ul.systemMenu > li.activeMenuItem > a .e
   background-position: -144px 0px;
 }
 #footer {
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.7);
   min-width: 600px; 
   !important; width: 600px;
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 48px;
+  z-index: 5;
 }
 
 #infoContainer {
@@ -618,7 +620,44 @@ ul.mkfPageContextMenu li {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  z-index: 5;
 }
+#firstBG {
+  z-index: 4;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  min-width: 600px;
+  overflow: hidden;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  -webkit-transition: opacity 3s ease-in-out;
+  -moz-transition: opacity 3s ease-in-out;
+  -o-transition: opacity 3s ease-in-out;
+  transition: opacity 3s ease-in-out;
+}
+#secondBG {
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  min-width: 600px;
+  overflow: hidden;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.transparent {
+  opacity: 0;
+}
+
 #content {
   bottom: 48px;
   left: 0;
@@ -628,7 +667,7 @@ ul.mkfPageContextMenu li {
   position: absolute;
   right: 0;
   top: 48px;
-  z-index: 50;
+  z-index: 15;
   background-image: url("");
   background-repeat: no-repeat;
   background-attachment: fixed;
